cleaned up formatting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,12 @@
 server.port=8030
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.group-id=group_id
+spring.kafka.consumer.group-id=report
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
 #Kafka Producer Settings
 spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
 #set topics to false if topic is not created
 spring.kafka.listener.missing-topics-fatal=false
