containerized session report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
-#Kafka Consumer Settings
 server.port=8030
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+
+#Kafka Consumer Settings
+##UNCOMMENT THE LINE BELOW IF YOU WANT TO USE DOCKER KAFKA
+spring.kafka.consumer.bootstrap-servers=kafka:9092
+##UNCOMMENT THE LINE BELOW IF YOU WANT TO USE LOCAL KAFKA
+#spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.group-id=report
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
 #Kafka Producer Settings
-spring.kafka.producer.bootstrap-servers=localhost:9092
+##UNCOMMENT THE LINE BELOW IF YOU WANT TO USE DOCKER KAFKA
+spring.kafka.producer.bootstrap-servers=kafka:9092
+##UNCOMMENT THE LINE BELOW IF YOU WANT TO USE LOCAL KAFKA
+#spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 #set topics to false if topic is not created
